# lightweight-solar-fm

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml
configs/: halpha.yaml  xrs.yaml
configs/finetune/flare_forecasting/: m_concat.yaml  m_cross.yaml  m_gated.yaml
configs/pretrain/: halpha.yaml  lasco_c2.yaml  xrs.yaml
lw-solar-fm/: solar_models.py  solar_pretrain_datamodule.py  solar_pretrain_dataset.py
scripts/: check_dataloader.py  download_gong.py  finetuning.py  preprocessing_xrs.py  pretraining.py  test_xrs.py
scripts/analysis/: compute_statistics_halpha.py  compute_statistics_xrs.py  visualize_xrs_performance.py
scripts/training/: finetuning.py  pretraining.py
